--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           <div class="judge-icon"><i class="fas fa-gavel"></i></div>
           <div class="judge-text">
             <h4>Using an LLM-as-a-Judge</h4>
-            <p>To classify thousands of responses accurately and efficiently, we used a majority vote of an ensemble of 3 calls to GPT-5-mini as a judge. A majority vote of 3 responses were used We validated this approach on a manually labeled set, where the judge achieved <strong>95% agreement with human annotations</strong>, confirming its high reliability for our experiments.</p>
+            <p>To classify thousands of responses accurately and efficiently, we used a majority vote of an ensemble of 3 calls to GPT-5-mini as a judge. We validated this approach on a manually labeled set, where the judge achieved <strong>95% agreement with human annotations</strong>, confirming its high reliability for our experiments.</p>
           </div>
         </div>
       </div>
