--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
   <!-- JavaScript Libraries -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+  <!-- Cloudflare Web Analytics -->
+  <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "43286c796a974062a733f634501211ab"}'></script>
+
 </head>
 <body>
 
@@ -165,7 +169,7 @@
             <p>The model correctly identifies that the statement is false but fails to recover the original, correct theorem.</p>
           </div>
           <div class="behavior-card">
-            <i class="fas fa-thumbs-up"></i>
+            <i class="fas fa-thumbs-down"></i>
             <h4>Sycophant</h4>
             <p>The model fails to see the error and proceeds to "prove" the false statement, fully agreeing with the user's flawed premise.</p>
           </div>
